# chess-engine

./: .editorconfig  .gitignore  CMakeLists.txt  ChessEngine20.sln  ChessEngine20.vcxproj  ChessEngine20.vcxproj.filters  Input.txt  LICENSE  README.md  WinBuild.py  build.zig  game.pgn  makefile  pgn-extract-output-parser.py
include/: Assert.hpp  BitBoard.hpp  BitBoardUtils.hpp  BitMaskValue.hpp  Board.hpp  CachedCapturesGeneration.hpp  CachedMoves.hpp  CapturesGeneration.hpp  Castle.hpp  Color.hpp  CommonHeaders.hpp  Definitions.hpp  FormatUtils.hpp  GameState.hpp  GameUtils.hpp  Log.hpp  MagicBitBoards.hpp  Move.hpp  MoveGeneration.hpp  MoveSearch.hpp  Moves.hpp  PieceCode.hpp  Position.hpp  RandomNumberGenerator.hpp  SearchThread.hpp  SearchThreadPool.hpp  Square.hpp  StringUtils.hpp  TestFW.hpp  Tests.hpp  ThreadState.hpp  Timer.hpp  UCIUtils.hpp  ZobristHash.hpp
src/: Assert.hpp  BitBoard.cpp  BitBoard.hpp  BitBoardUtils.cpp  BitBoardUtils.hpp  BitMaskValue.cpp  BitMaskValue.hpp  Board.cpp  Board.hpp  CachedCapturesGeneration.cpp  CachedMoves.cpp  CapturesGeneration.cpp  CapturesGeneration.hpp  Castle.cpp  Color.cpp  Definitions.cpp  Definitions.hpp  FormatUtils.cpp  FormatUtils.hpp  GameState.cpp  GameState.hpp  GameUtils.cpp  MagicBitBoards.cpp  MagicBitBoards.hpp  Main.cpp  Move.cpp  MoveGeneration.cpp  MoveGeneration.hpp  MoveSearch.cpp  MoveSearch.hpp  Moves.cpp  Moves.hpp  PieceCode.cpp  PieceValue.cpp  PieceValue.hpp  Position.cpp  Position.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  SearchThread.cpp  (+15 more)
test/: BoardTests.cpp  ConversionTests.cpp  (+8 more)
(+5 files in other folders)
